[project]
name = "guru-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Denzel",email = "butmanovich@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
